--- a/src/templates/samples/help/sample.twig
+++ b/src/templates/samples/help/sample.twig
@@ -59,33 +59,35 @@
     ]
 {-------------------------------------------------------------------------------------##}
 
-<h1>Help for {{ field.name }} - {{ opt.label }}.</h1>
-
 {% if opt.tooltips.inline ?? null %}
     <p class="intro">{{ opt.tooltips.inline | markdown | retconChange( 'p', false ) }}</p>
 {% endif %}
 
+<div class="settings-grid">
+    <div>
+    {% if opt.virtuals ?? null %}
+        <h2>Configurable Settings</h2>
+        <ul>
+            {% for virt in opt.virtuals %}
+                <li><Strong>{{ virt.label }}</strong><br>{{ virt.instructions }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    </div>
+    <div>
+        {% if opt.settings ?? null %}
+            <h2>Settings Tokens</h2>
+            <code>
+                {{ dump( opt.settings )}}
+            </code>
+        {% endif %}
+    </div>
+</div>
+
 <p><strong>ACTUAL TIP</strong> - Add your own "non-standard" keys to the `tooltips` config and use them as populate the `helptwig` template file.</p>
 
-{% if opt.virtuals ?? null %}
-    <h2>Configurable Field Settings</h2>
-    <ul>
-        {% for virt in opt.virtuals %}
-            <li><Strong>{{ virt.label }}</strong><br>{{ virt.instructions }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-
-{% if opt.settings ?? null %}
-    <h2>Hard Settings</h2>
-    {{ dump( opt.settings )}}
-{% endif %}
-
+<br>
 <h2>A Helpful Video!</h2>
 <div class="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/x5bVKZxFdPo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="mx-auto"></iframe>
 </div>
-
-<p><b>Bork!</b> An haec ab eo non dicuntur? Duo Reges: constructio interrete. Nam Metrodorum non puto ipsum professum, sed, cum appellaretur ab Epicuro, repudiare tantum beneficium noluisse.</p>
-
-<p><a href="https://www.example.com" target="_blank">An inline link ➔</a></p>
